@@ -1,18 +1,17 @@
 package com.moxa.dream.boot.test;
 
 import com.moxa.dream.boot.BootApplication;
-import com.moxa.dream.boot.autoconfigure.DreamAutoConfiguration;
 import com.moxa.dream.boot.service.CityService;
-import com.moxa.dream.boot.template.mapper.SessionMapper;
 import com.moxa.dream.boot.table.City;
+import com.moxa.dream.boot.template.mapper.SessionMapper;
 import com.moxa.dream.driver.page.Page;
-import com.moxa.dream.system.core.resultsethandler.DefaultResultSetHandler;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.test.context.junit4.SpringRunner;
 
+import java.util.Arrays;
 import java.util.List;
 
 @RunWith(SpringRunner.class)
@@ -23,7 +22,6 @@ public class QueryTest {
     @Autowired
     private SessionMapper sessionMapper;
     static int count = 1000000;
-
     @Test
     public void test() {
         long l = System.currentTimeMillis();
@@ -45,7 +43,7 @@ public class QueryTest {
     public void testSelectByIds() {
         long l = System.currentTimeMillis();
         for (int i = 0; i < count; i++) {
-            sessionMapper.selectByIds(City.class, List.of(1,2,3));
+            sessionMapper.selectByIds(City.class, Arrays.asList(1, 2, 3));
         }
         System.out.println(System.currentTimeMillis() - l);
     }
@@ -68,7 +66,7 @@ public class QueryTest {
 //        city.setState("CA");
         city.setName("AA");
         for (int i = 0; i < count; i++) {
-            List<City> cities = sessionMapper.selectNonList(City.class, city);
+            List<City> cities = sessionMapper.selectList(City.class, city);
         }
         System.out.println(System.currentTimeMillis() - l);
     }
@@ -92,7 +90,7 @@ public class QueryTest {
         long l = System.currentTimeMillis();
 
         for (int i = 0; i < count; i++) {
-            Page<City> cities = sessionMapper.selectNonPage(City.class, city, page);
+            Page<City> cities = sessionMapper.selectPage(City.class, city, page);
         }
         System.out.println(System.currentTimeMillis() - l);
     }
